# negmas

./: .coveragerc  .dmypy.json  .envrc  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  3issue5agent.py  AGENTS.md  AUTHORS.rst  COMPLETE_DOCUMENTATION_SUMMARY.md  CONTRIBUTING.rst  DOCUMENTATION_COMPLETION_SUMMARY.md  DOCUMENTATION_REPORT.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  conftest.py  constraints.txt  debug_capabilities.py  domainrepository.xml  multi-issue-simple.py  old_setup.py  parameter-history.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-all.txt  requirements-dev.txt  requirements-elicitation.txt  requirements-visualizer.txt  requirements.txt  restore_git_repos.bat  restore_git_repos.sh  ruff.toml  (+12 more)
.github/workflows/: SlowCI.yml  coverage.yml  doc.yml  pypi.yml  test.yml  test_jupyter_notebooks.yml  test_with_java.yml
.venv-anl311/: pyvenv.cfg
DOOO/: AlmastEqualAgent.md  OneShotAgent.md
_trash/: requirements-dev.tx_  requirements-elicitation.tx_  requirements.tx_  setup.cfg
config/: anac2019scml.json
coverage_html_report/: index.html  negmas___init___py.html  negmas_apps___init___py.html  negmas_apps_scml___init___py.html  negmas_apps_scml_agent_py.html  negmas_apps_scml_awi_py.html  negmas_apps_scml_bank_py.html  negmas_apps_scml_common_py.html  negmas_apps_scml_consumers_py.html  negmas_apps_scml_factory_managers_py.html  negmas_apps_scml_helpers_py.html  negmas_apps_scml_insurance_py.html  negmas_apps_scml_miners_py.html  negmas_apps_scml_schedulers_py.html  negmas_apps_scml_simulators_py.html  negmas_apps_scml_utils_py.html  negmas_apps_scml_world_py.html  negmas_checkpoints_py.html  negmas_common_py.html  negmas_elicitors_py.html  negmas_events_py.html  negmas_generics_py.html  negmas_genius_py.html  negmas_helpers_py.html  negmas_inout_py.html  negmas_java_py.html  negmas_mechanisms_py.html  negmas_modeling___init___py.html  negmas_modeling_acceptance_py.html  negmas_modeling_future_py.html  negmas_modeling_strategy_py.html  negmas_modeling_utility_py.html  negmas_mt_py.html  negmas_negotiators_py.html  negmas_outcomes_py.html  negmas_sao_py.html  negmas_situated_py.html  negmas_st_py.html  negmas_tournaments_py.html  negmas_utilities_py.html  (+2 more)
docs/: .gitignore  .readthedocs.yml  Makefile  advanced_negotiation.rst  anac.rst  api.rst  application_modules.rst  base_modules.rst  cli_negmas.rst  cli_negotiate.rst  components.rst  conf.py  getting_started.rst  gui_negmas_app.rst  helper_modules.rst  html_build.txt  index.rst  installation.rst  latex_build.txt  make.bat  make_docs.sh  modules.rstold  negotiation_mechanisms.rst  negotiators.rst  normalization.rst  overview.rst  publications.rst  readme.rst  references.rst  references.rstold  requirements-dev.txt  requirements.txt  scripts.rst  tools.rst  tutorials.rst  tutorials_template  update.sh  upgrade_guide.rst
docs/_static/: custom.css
docs/api/: negmas.acceptance_models.AcceptanceModel.rst  negmas.acceptance_models.AdaptiveAcceptanceModel.rst  negmas.acceptance_models.AggregatingAcceptanceModel.rst  negmas.acceptance_models.PeekingAcceptanceModel.rst  negmas.acceptance_models.PeekingProbabilisticAcceptanceModel.rst  negmas.acceptance_models.RandomAcceptanceModel.rst  negmas.acceptance_models.UncertainOpponentModel.rst  negmas.apps.scml.Bank.rst  negmas.apps.scml.CFP.rst  negmas.apps.scml.Consumer.rst  negmas.apps.scml.ConsumptionProfile.rst  negmas.apps.scml.DoNothingFactoryManager.rst  negmas.apps.scml.Factory.rst  negmas.apps.scml.FactoryManager.rst  negmas.apps.scml.FactoryState.rst  negmas.apps.scml.FactoryStatusUpdate.rst  negmas.apps.scml.GreedyFactoryManager.rst  negmas.apps.scml.GreedyScheduler.rst  negmas.apps.scml.InputOutput.rst  negmas.apps.scml.InsuranceCompany.rst  negmas.apps.scml.InsurancePolicy.rst  negmas.apps.scml.Job.rst  negmas.apps.scml.Line.rst  negmas.apps.scml.LineState.rst  negmas.apps.scml.Loan.rst  negmas.apps.scml.ManufacturingProfile.rst  negmas.apps.scml.ManufacturingProfileCompiled.rst  negmas.apps.scml.Miner.rst  negmas.apps.scml.MiningProfile.rst  negmas.apps.scml.MissingInput.rst  negmas.apps.scml.NegotiatorUtility.rst  negmas.apps.scml.Process.rst  negmas.apps.scml.Product.rst  negmas.apps.scml.ProductManufacturingInfo.rst  negmas.apps.scml.ProductionFailure.rst  negmas.apps.scml.ProductionNeed.rst  negmas.apps.scml.ProductionReport.rst  negmas.apps.scml.ReactiveMiner.rst  negmas.apps.scml.RunningCommandInfo.rst  negmas.apps.scml.SCMLAWI.rst  (+115 more)
docs/figs/: overview.pptx  ~$overview.pptx
docs/modules/: checkpoints.rst  common.rst  concurrent.rst  config.rst  elicitation.rst  ga.rst  (+23 more)
etc/: 06.run_scml.rst  README.txt  layout.html  run_notebooks.py  update_rtd_layout.sh
negmas/: .pre-commit-config.yaml  __init__.py  acceptance_models.py  checkpoints.py  common.py  config.py  elicitors.py  events.py  exceptions.py  ga.py  generics.py  genius.py  helpers.py  inout.py  java.py  mechanisms.py  mt.py  negotiators.py  outcomes.py  protocols.py  sao.py  serialization.py  situated.py  st.py  tournament.py  tournaments.py  utilities.py  visualizers.py  warnings.py  wily-report.html
notebooks/: Untitled.ipynb  Untitled1.ipynb  getting_started.ipynb  overview.ipynb  overview.rst  pareto_profiling.ipynb  scml_test.ipynb
pip-wheel-metadata/: negmas-0.1.26-py3-none-any.whl
scripts/: negmas.py  rungenius  scml  tournament  tournament.py
tests/: failed_genius  fixtures.py  switches.py  test_base_issue.py  test_basic_agent.py  test_checkpoints.py  test_common.py  test_factory.py  test_factory_all.py  test_genius.py  test_genius_bridge.py  test_genius_negotiators_all.py  test_greedy_scheduler.py  test_helpers.py  test_inout.py  test_integration.py  test_inverter.py  test_issue.py  test_jnegmas.py  test_jupyter.py  test_neg_tournaments.py  test_negotiators.py  test_outcomes.py  test_preferences.py  test_prob_ufun.py  test_protocols.py  test_sao.py  test_sao_negotiators.py  test_sao_slow.py  test_scml.py  test_situated.py  test_tournaments.py  test_trips_world.py  test_utilities.py
(+1588 files in other folders)
