[tool.poetry]
name = "negmas"
version = "0.2.12"
description = "NEGotiations Managed by Agent Simulations"
authors = ["Yasser Mohammad <yasserfarouk@gmail.com>"]
license = "GPL-2.0+"

readme = 'README.rst'

repository = "https://github.com/yasserfarouk/negmas"
homepage = "https://github.com/yasserfarouk/negmas"

keywords = ['negotiation', 'mas', 'multi-agent', 'simulation', 'AI']

include = ["*.rst", "LICENSE"]
exclude = ["negmas/**/*.pyc", "nemgas/**/__pycache__", "config", "docs", "etc", "notebooks", "tests"]

[tool.poetry.dependencies]
python = ">=3.6"
Click = ">=6.0"
dataclasses = { version = "*", python = "<3.7" }
PyYAML = "5.1b1" # to avoid a security issue found by github
distributed = { version = "*", optional = true }
progressbar2 = ">=3.39"
typing_extensions = ">=3.7"
pytest-runner = ">=4.4"
pandas = ">=0.24.1"
scipy = ">=1.2"
numpy = ">=1.16"
stringcase = "*"
py4j = "*"
colorlog = "*"
inflect = "*"
matplotlib = "*"
setuptools = ">=40.8.0"
tabulate = "*"
typing = "*"
tqdm = ">=4.31.1"
click-config-file = "^0.4.5"

[tool.poetry.dev-dependencies]
lockfile = "*"
pytest = "*"
pytest-cov = "*"
poetry = "*"
hypothesis = "*"
tox = "*"
poetry-setup = "*"
codacy-coverage = "*"
pytest-timeout = "^1.3"
coverage = "*"
bumpversion = "*"
typing-extensions = "*"
docopt =  "*"
docutils =  "*"
Sphinx =  "*"
sphinx =  "*"
sphinx-autodoc-annotation =  "*"
sphinx-autodoc-typehints =  "*"
sphinx-automodapi =  "*"
sphinx-rtd-theme =  "*"
sphinxcontrib-napoleon =  "*"
sphinxcontrib-websupport =  "*"
sphinxtesters =  "*"
ipykernel =  "*"
ipython =  "*"
ipython-genutils =  "*"
ipywidgets =  "*"
jupyter =  "*"
jupyter-client =  "*"
jupyter-console =  "*"
jupyter-contrib-core =  "*"
jupyter-contrib-nbextensions =  "*"
jupyter-core =  "*"
jupyter-highlight-selected-word =  "*"
jupyter-latex-envs =  "*"
jupyter-nbextensions-configurator =  "*"
MarkupSafe =  "*"
matplotlib =  "*"
nb2plots =  "*"
nbconvert =  "*"
nbformat =  "*"
nbsphinx =  "*"
pandoc =  "*"
pandocfilters =  "*"
pycodestyle =  "*"
pydocstyle =  "*"
readme-renderer =  "*"
recommonmark =  "*"


[tool.poetry.scripts]
negmas = 'negmas.scripts.app:cli'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

