[project]
name = "negmas"
version = "0.14.0"
description = "NEGotiations Managed by Agent Simulations"
readme = "README.rst"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Yasser Mohammad", email = "yasserfarouk@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "attrs>=24.2.0",
    "click>=8.1.7",
    "click-config-file>=0.6.0",
    "cloudpickle>=3.1.0",
    "colorlog>=6.9.0",
    "dill>=0.3.9",
    "gif>=23.3.0",
    "inflect>=4.1.0,<6.0", # needed when using data-model-generator
    "plotly>=5.18.0",
    "kaleido>=0.2.1", # for saving plotly figures as static images
    "pillow>=12.1.0",
    "networkx>=3.4.2",
    "psutil>=6.1.0",
    "py4j>=0.10.9.7",
    "rich>=13.9.4",
    "scikit-learn>=1.5.2",
    "setuptools>=75.5.0",
    "stringcase>=1.2.0",
    "tabulate>=0.9.0",
    "typer>=0.13.0",
    "pyyaml>=6.0.2",
    "typing-extensions>=4.12.2",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "numpy",
    "pyarrow>=22.0.0",
]

[build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
gui = [
    "pyqt5>=5.15.11",
]
# distributed = [
#     "dask[complete]>=2024.11.2",
# ]
testing = [
    "hypothesis>=6.118.8",
    "pytest-check>=2.4.1",
    "pytest-timeout>=2.3.1",
    "pytest>=8.3.3",
]
docs = [
    "nbformat>=5.10.4",
    "nbsphinx>=0.9.6",
    "notebook==6.4.12",
    "pillow>=12.1.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=2.0.0,<3.0.0; python_version < '3.11'",
    "sphinx-autodoc-typehints>=3.0.0; python_version >= '3.11'",
    "sphinx-tabs>=3.4.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-click>=6.0.0",
    "sphinxcontrib-typer>=0.5.0",
    "furo>=2024.1.29",
]
dev = [
    "bumpversion>=0.6.0",
    "codacy-coverage>=1.3.11",
    "coverage>=7.6.5",
    "docutils>=0.21.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "markupsafe>=3.0.2",
    "pandoc>=2.4",
    "papermill>=2.6.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
    "readme-renderer>=44.0",
    "recommonmark>=0.7.1",
    "ruff>=0.11.0",
    "seaborn>=0.13.0",
    "tox>=4.23.2",
    "twine>=5.1.1",
    "wheel>=0.45.0",
]

[project.scripts]  # Entry points
negmas = "negmas.scripts.app:cli"
negotiate = "negmas.scripts.negotiate:app"
negui = "negmas.gui.app:cli"

# --- Tool Configurations ---


[tool.flake8]
exclude = ["docs"]

[tool.pytest.ini_options]
norecursedirs = [".svn", "_build", "tmp*", "build", "docs", ".undodir", "scratch", "trash", ".hypothesis"]
addopts = "--doctest-modules --hypothesis-show-statistics"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "repeat(n): repeat test n times",
]
collect_ignore = ["setup.py"]

[tool.mypy]
warn_unused_configs = false
warn_incomplete_stub = true
check_untyped_defs = true
python_version = "3.10"
strict_optional = false
ignore_missing_imports = false

[[tool.mypy.overrides]]  # mypy overrides
module = ["setup.*"]
check_untyped_defs = false
