[bumpversion]
current_version = 0.10.15
delete_bookmark = True
commit = False
tag = False

[metadata]
name = negmas
version = 0.10.15
author = Yasser Mohammad
author_email = yasserfarouk@gmail.com
description = NEGotiations Managed by Agent Simulations
keywords =
	negotiation
	mas
	multi-agent
	simulation
	AI
url = https://github.com/yasserfarouk/negmas
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
classifiers =
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
	Click (>=6.0)
	PyYAML
	progressbar2 (>=3.39)
	typing_extensions (>=3.7)
	pytest-runner (>=4.4)
	pandas (>=0.24.1)
	scipy (>=1.2)
	numpy (>=1.16)
	stringcase
	colorlog
	inflect
	matplotlib
	setuptools (>=40.8.0)
	tabulate
	typing
	click-config-file
	dill
	cloudpickle
	seaborn
	scikit-learn
	networkx
	gif
	py4j
	psutil
	rich
	attrs
	typer
	hypothesis
include_package_data = True
python_requires = >=3.10
dependency_links =

[options.entry_points]
console_scripts =
	negmas=negmas.scripts.app:cli
	negotiate=negmas.scripts.negotiate:app
	negui=negmas.gui.app:cli

[options.extras_require]
visualization =
	flask
	dash
	dash-daq
	dash-bootstrap-components
gui = pyqt5
dask = dask[complete]
numba = numba

[bumpversion:file:VERSION]

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:negmas/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:docs/conf.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[mypy]
warn_unused_configs = False
warn_incomplete_stub = True
check_untyped_defs = True
python_version = 3.10
strict_optional = False
ignore_missing_imports = False

[mypy-setup.*]
check_untyped_defs = False
